--- a/src/SkiResort.DataGeneration/gen-restaurantssearch/App.config
+++ b/src/SkiResort.DataGeneration/gen-restaurantssearch/App.config
@@ -1,14 +1,14 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
+<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" />
     </startup>
   <appSettings>
-    <add key="AzureSearchName" value="__SEARCHSERVICENAME__" />
-    <add key="AzureSearchKey" value="__SEARCHKEY__" />
-    <add key="ConnectionString" value="__SQLCONNECTIONSTRING__"/>
-    <add key="RecoUser" value="__RECOUSER__"/>
-    <add key="RecoKey" value="__RECOKEY__"/>
+    <add key="AzureSearchName" value="search75bolg55sbwx2" />
+    <add key="AzureSearchKey" value="794D878765307C85F2EC980CF7261C55" />
+    <add key="ConnectionString" value="Data Source=tcp:vm75bolg55sbwx2.westeurope.cloudapp.azure.com,1433;Initial Catalog=AdventureWorks.SkiResort;User Id=skiresort;Password=P2ssw0rd@1;"/>
+    <add key="RecoUser" value="1"/>
+    <add key="RecoKey" value="1"/>
     <add key="RecoModelId" value="__MODELID__"/>
   </appSettings>
 </configuration>
