--- a/src/SkiResort.DataGeneration/gen-skilocations/App.config
+++ b/src/SkiResort.DataGeneration/gen-skilocations/App.config
@@ -1,12 +1,12 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <startup>
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2"/>
   </startup>
   <appSettings>
     <!-- Service Bus specific app setings for messaging connections -->
-    <add key="EventHubConnectionString" value="__EVENTHUBCONNECTIONSTRING__"/>
-    <add key="EventHubConnectionPath" value="__EVENTHUBCONNECTIONPATH__"/>
+    <add key="EventHubConnectionString" value="Endpoint=sb://hub-ns75bolg55sbwx2.servicebus.windows.net/;SharedAccessKeyName=RootManageSharedAccessKey;SharedAccessKey=we4JjF/IfSV5A4LilZHKm2QkMwECWrysdjB6CyJDHE0="/>
+    <add key="EventHubConnectionPath" value="hub75bolg55sbwx2"/>
   </appSettings>
   <system.serviceModel>
     <extensions>
