--- a/src/SkiResort.DataGeneration/gen-skirentals/gen-skirentals.csproj
+++ b/src/SkiResort.DataGeneration/gen-skirentals/gen-skirentals.csproj
@@ -33,9 +33,8 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="PublicHoliday, Version=1.3.1.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\PublicHoliday.1.3.1.0\lib\net40\PublicHoliday.dll</HintPath>
-      <Private>True</Private>
+    <Reference Include="PublicHoliday">
+      <HintPath>..\packages\PublicHoliday.1.5.0\lib\net40\PublicHoliday.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.configuration" />
