AppSettings update, real keys have been replced by variables

--- a/src/SkiResort.DataGeneration/gen-skilocations/App.config
+++ b/src/SkiResort.DataGeneration/gen-skilocations/App.config
@@ -5,8 +5,8 @@
   </startup>
   <appSettings>
     <!-- Service Bus specific app setings for messaging connections -->
-    <add key="EventHubConnectionString" value="Endpoint=sb://hub-ns75bolg55sbwx2.servicebus.windows.net/;SharedAccessKeyName=RootManageSharedAccessKey;SharedAccessKey=we4JjF/IfSV5A4LilZHKm2QkMwECWrysdjB6CyJDHE0="/>
-    <add key="EventHubConnectionPath" value="hub75bolg55sbwx2"/>
+    <add key="EventHubConnectionString" value="__EVENTHUBCONNECTIONSTRING__"/>
+    <add key="EventHubConnectionPath" value="__EVENTHUBCONNECTIONPATH__"/>
   </appSettings>
   <system.serviceModel>
     <extensions>
