--- a/src/SkiResort.DataGeneration/gen-recomodel/App.config
+++ b/src/SkiResort.DataGeneration/gen-recomodel/App.config
@@ -4,8 +4,8 @@
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" />
   </startup>
   <appSettings>
-    <add key="ConnectionString" value="Data Source=tcp:vm75bolg55sbwx2.westeurope.cloudapp.azure.com,1433;Initial Catalog=AdventureWorks.SkiResort;User Id=skiresort;Password=P2ssw0rd@1;"/>
-    <add key="RecoUser" value="1"/>
-    <add key="RecoKey" value="1"/>
+    <add key="ConnectionString" value="__SQLCONNECTIONSTRING__"/>
+    <add key="RecoUser" value="__RECOUSER__"/>
+    <add key="RecoKey" value="__RECOKEY__"/>
   </appSettings>
 </configuration>
