--- a/src/SkiResort.DataGeneration/gen-skirentals/App.config
+++ b/src/SkiResort.DataGeneration/gen-skirentals/App.config
@@ -4,6 +4,6 @@
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" />
     </startup>
   <appSettings>
-    <add key="ConnectionString" value="Data Source=tcp:vm75bolg55sbwx2.westeurope.cloudapp.azure.com;Initial Catalog=AdventureWorks.SkiResort;User Id=skiresort;Password=P2ssw0rd@1;"/>
+    <add key="ConnectionString" value="__SQLCONNECTIONSTRING__"/>
   </appSettings>
 </configuration>
