--- a/src/SkiResort.DataGeneration/gen-recomodel/App.config
+++ b/src/SkiResort.DataGeneration/gen-recomodel/App.config
@@ -3,9 +3,16 @@
   <startup>
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" />
   </startup>
+  <runtime>
+    <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
+      <dependentAssembly>
+        <assemblyIdentity name="Newtonsoft.Json" publicKeyToken="30ad4fe6b2a6aeed" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-9.0.0.0" newVersion="9.0.0.0" />
+      </dependentAssembly>
+    </assemblyBinding>
+  </runtime>
   <appSettings>
     <add key="ConnectionString" value="__SQLCONNECTIONSTRING__"/>
-    <add key="RecoUser" value="__RECOUSER__"/>
     <add key="RecoKey" value="__RECOKEY__"/>
   </appSettings>
 </configuration>
