--- a/src/SkiResort.DataGeneration/gen-restaurantssearch/packages.config
+++ b/src/SkiResort.DataGeneration/gen-restaurantssearch/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Microsoft.AspNet.WebApi.Client" version="5.2.3" targetFramework="net452" />
   <package id="Microsoft.Azure.Search" version="1.1.1" targetFramework="net452" />
   <package id="Microsoft.Rest.ClientRuntime" version="1.8.1" targetFramework="net452" />
   <package id="Microsoft.Rest.ClientRuntime.Azure" version="2.5.2" targetFramework="net452" />
