Changed Anomaly Detection API from DataMarket to AzureML

--- a/src/SkiResort.Web/appsettings.json
+++ b/src/SkiResort.Web/appsettings.json
@@ -15,7 +15,8 @@
     "TelemetryStorage": "__STORAGECONNECTIONSTRING__"
   },
   "AnomalyDetection": {
-    "Key": "__ANOMALYDETECTIONKEY__"
+    "Key": "__ANOMALYDETECTIONKEY__",
+    "RequestUri": "__ANOMALYDETECTIONURI__"
   },
   "ApplicationInsights": {
     "InstrumentationKey": "__YOUR_INSTRUMENTATION_KEY__"
