Working on rental form

--- a/src/SkiResort.XamarinApp/SkiResort.XamarinApp/SkiResort.XamarinApp.csproj
+++ b/src/SkiResort.XamarinApp/SkiResort.XamarinApp/SkiResort.XamarinApp.csproj
@@ -105,6 +105,7 @@
     <Compile Include="ViewModels\RentalListViewModel.cs" />
     <Compile Include="ViewModels\RentalViewModel.cs" />
     <Compile Include="ViewModels\WeatherWidgetViewModel.cs" />
+    <Compile Include="Views\BindablePickerView.cs" />
     <Compile Include="Views\DiningView.xaml.cs">
       <DependentUpon>DiningView.xaml</DependentUpon>
     </Compile>
