--- a/src/SkiResort.XamarinApp/SkiResort.XamarinApp.iOS/SkiResort.XamarinApp.iOS.csproj
+++ b/src/SkiResort.XamarinApp/SkiResort.XamarinApp.iOS/SkiResort.XamarinApp.iOS.csproj
@@ -270,6 +270,9 @@
   <ItemGroup>
     <BundleResource Include="Resources\plus-square-o-menuicon%403.png" />
   </ItemGroup>
+  <ItemGroup>
+    <BundleResource Include="Resources\check.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\iOS\Xamarin.iOS.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
     <PropertyGroup>
