Sorting icon in dinner, optimize PNG

--- a/src/SkiResort.XamarinApp/SkiResort.XamarinApp.iOS/SkiResort.XamarinApp.iOS.csproj
+++ b/src/SkiResort.XamarinApp/SkiResort.XamarinApp.iOS/SkiResort.XamarinApp.iOS.csproj
@@ -273,6 +273,9 @@
   <ItemGroup>
     <BundleResource Include="Resources\check.png" />
   </ItemGroup>
+  <ItemGroup>
+    <BundleResource Include="Resources\sort_amount_desc.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\iOS\Xamarin.iOS.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
     <PropertyGroup>
