--- a/src/SkiResort.XamarinApp/SkiResort.XamarinApp/project.json
+++ b/src/SkiResort.XamarinApp/SkiResort.XamarinApp/project.json
@@ -4,6 +4,7 @@
     "NETStandard.Library": "1.6.0",
     "Newtonsoft.Json": "9.0.1",
     "Xamarin.FFImageLoading.Forms": "2.2.7",
+    "Xamarin.FFImageLoading.Transformations": "2.2.8",
     "Xamarin.Forms": "2.3.3.180"
   },
   "frameworks": {
