--- a/src/SkiResort.XamarinApp/SkiResort.XamarinApp.Droid/SkiResort.XamarinApp.Droid.csproj
+++ b/src/SkiResort.XamarinApp/SkiResort.XamarinApp.Droid/SkiResort.XamarinApp.Droid.csproj
@@ -173,6 +173,21 @@
   <ItemGroup>
     <AndroidResource Include="Resources\drawable\exclamation_triangle_white.png" />
   </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\dining.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\rental.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\ticket.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\webcam.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\home.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
     <PropertyGroup>
