Rename documentDB to Cosmos DB

--- a/src/SkiResort.Web/appsettings.json
+++ b/src/SkiResort.Web/appsettings.json
@@ -28,9 +28,9 @@
     "Indexer": "restaurant",
     "Suggester": "restaurant"
   },
-  "DocumentDB": {
-    "EndpointUri": "__DOCUMENTDBENDPOINT__",
-    "Key": "__DOCUMENTDBKEY__"
+  "CosmosDB": {
+    "EndpointUri": "__COSMOSDBENDPOINT__",
+    "Key": "__COSMOSDBKEY__"
   },
   "Logging": {
     "IncludeScopes": false,
