--- a/src/SkiResort.Web/project.json
+++ b/src/SkiResort.Web/project.json
@@ -42,6 +42,7 @@
   "buildOptions": {
     "emitEntryPoint": true,
     "preserveCompilationContext": true,
+    "nowarn": [ "CS0618" ],
     "warningsAsErrors": true
   },
 
